# haskell-numpy-docs

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  genindex.html  haskell-numpy-docs.cabal  index.html  objects.inv  quickstart.basics.html  quickstart.fancy-indexing.html  quickstart.html  quickstart.linear-algebra.html  quickstart.shape-manipulation.html  quickstart.tricks.html  search.html  searchindex.js  stack.yaml
.doctrees/: environment.pickle  index.doctree  quickstart.basics.doctree  quickstart.doctree  quickstart.fancy-indexing.doctree  quickstart.linear-algebra.doctree  quickstart.shape-manipulation.doctree  quickstart.tricks.doctree
_sources/: index.rst.txt  quickstart.rst.txt
docs/: Makefile  comparetabs.py  conf.py  index.rst  make.bat  quickstart.basics.rst  quickstart.fancy-indexing.rst  quickstart.linear-algebra.rst  quickstart.quickstart.rst  quickstart.rst  quickstart.shape-manipulation.rst  quickstart.tricks.rst
docs/_build/doctrees/: environment.pickle  index.doctree  quickstart.doctree
docs/_build/html/: genindex.html  quickstart.html  searchindex.js
docs/_build/html/_sources/: quickstart.rst.txt
src/: Lib.hs
src/quickstart/: hmatrix.hs
