name:                haskell-numpy-docs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pechersky/haskell-numpy-docs#readme
license:             BSD3
license-file:        LICENSE
author:              Yakov Pechersky
maintainer:          yakov@pechersky.us
copyright:           2017 Yakov Pechersky
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haskell-numpy-docs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-numpy-docs
                     , hmatrix
                     , hTensor
                     , vector
  default-language:    Haskell2010

test-suite haskell-numpy-docs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-numpy-docs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pechersky/haskell-numpy-docs
